Project file structure

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "javascript"
   ],
   "author": "Prafulla Badgujar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
