--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "watchbox",
   "version": "1.0.0",
   "description": "A Backend of videostreaming platform using Mongodb",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config--experimental-json-modules Backend/src/index.js"
   },
   "keywords": [
     "javascript"
   ],
   "author": "Prafulla Badgujar",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+  "dependencies": {
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.5.1"
+      },
+      "devDependencies": {
+        "nodemon": "^3.1.4"
+      }
 }
