--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "watchbox",
   "version": "1.0.0",
   "description": "A Backend of videostreaming platform using Mongodb",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config--experimental-json-modules Backend/src/index.js"
@@ -13,11 +13,13 @@
   "author": "Prafulla Badgujar",
   "license": "ISC",
   "dependencies": {
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "mongoose": "^8.5.1"
-      },
-      "devDependencies": {
-        "nodemon": "^3.1.4"
-      }
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
